Update requirements